--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,22 @@
-asn1crypto==0.24.0
-certifi==2018.10.15
-cffi==1.14.3
-chardet==3.0.4
-cryptography==3.3.2
-defusedxml==0.5.0
-idna==2.7
-jira==2.0.0
-oauthlib==2.1.0
-pbr==5.1.0
-pycparser==2.19
-PyJWT==1.6.4
-pytz==2018.5
-requests==2.20.0
-requests-oauthlib==1.0.0
-requests-toolbelt==0.8.0
-six==1.11.0
-urllib3==1.26.5
+asn1crypto==1.4.0
+certifi==2021.10.8
+cffi==1.15.0
+chardet==4.0.0
+charset-normalizer==2.0.12
+cryptography==36.0.1
+defusedxml==0.7.1
+idna==3.3
+importlib-metadata==4.11.2
+jira==3.1.1
+keyring==23.5.0
+oauthlib==3.2.0
+pbr==5.8.1
+pycparser==2.21
+PyJWT==2.3.0
+pytz==2021.3
+requests==2.27.1
+requests-oauthlib==1.3.1
+requests-toolbelt==0.9.1
+six==1.16.0
+urllib3==1.26.8
+zipp==3.7.0
